api schema by id #278